<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/front_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"/>

    <ImageView
        android:id="@+id/imageView1P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button1"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/One_Player_Game_Description" />

    <ImageView
        android:id="@+id/imageView2P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button2"
        android:layout_marginTop="400dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/Two_Player_Game_Description" />

    <ImageView
        android:id="@+id/question_mark"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/question"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/Question_Button_Description" />

    <ImageView
        android:id="@+id/setting"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/setting"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/Setting_Button_Description" />

</RelativeLayout>